CustomersAPI/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: customers
  namespace: workshop-microservices-aks-ingress
spec:
  selector:
    matchLabels:
      app: customers
  replicas: 2
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
      - name: customers
        image: workshopmicroservicescr.azurecr.io/customers:v3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
    name: customers
    namespace: workshop-microservices-aks-ingress
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 5000
      targetPort: 443
  selector:
    app: customers
  type: ClusterIP
