CustomersAPI/workshop-microservices-aks-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workshop-microservices-aks-ingress
  namespace: workshop-microservices-aks-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: customers
          servicePort: 80
        path: /workshop/(.*)
